Updated the tests in SbGroupChannelManagerTest.java and CreateGroupChannelInteractorTest.java.